lldb/TODO
[ 84%] Building CXX object source/Plugins/Process/NetBSD/CMakeFiles/lldbPluginProcessNetBSD.dir/NativeThreadNetBSD.cpp.o
/usr/work/wip/lldb/work/lldb-16.0.2.src/source/Plugins/Process/NetBSD/NativeRegisterContextNetBSD_x86_64.cpp: In member function 'virtual lldb_private::Status lldb_private::process_netbsd::NativeRegisterContextNetBSD_x86_64::ReadRegister(const lldb_private::RegisterInfo*, lldb_private::RegisterValue&)':
/usr/work/wip/lldb/work/lldb-16.0.2.src/source/Plugins/Process/NetBSD/NativeRegisterContextNetBSD_x86_64.cpp:412:28: error: 'class std::optional<lldb_private::process_netbsd::NativeRegisterContextNetBSD_x86_64::RegSetKind>' has no member named 'getValue'
  412 |   RegSetKind set = opt_set.getValue();
      |                            ^~~~~~~~
/usr/work/wip/lldb/work/lldb-16.0.2.src/source/Plugins/Process/NetBSD/NativeRegisterContextNetBSD_x86_64.cpp: In member function 'virtual lldb_private::Status lldb_private::process_netbsd::NativeRegisterContextNetBSD_x86_64::WriteRegister(const lldb_private::RegisterInfo*, const lldb_private::RegisterValue&)':
/usr/work/wip/lldb/work/lldb-16.0.2.src/source/Plugins/Process/NetBSD/NativeRegisterContextNetBSD_x86_64.cpp:479:28: error: 'class std::optional<lldb_private::process_netbsd::NativeRegisterContextNetBSD_x86_64::RegSetKind>' has no member named 'getValue'
  479 |   RegSetKind set = opt_set.getValue();
      |                            ^~~~~~~~
[ 84%] Building CXX object source/Initialization/CMakeFiles/lldbInitialization.dir/SystemLifetimeManager.cpp.o
--- source/Plugins/Process/NetBSD/CMakeFiles/lldbPluginProcessNetBSD.dir/NativeRegisterContextNetBSD_x86_64.cpp.o ---
*** [source/Plugins/Process/NetBSD/CMakeFiles/lldbPluginProcessNetBSD.dir/NativeRegisterContextNetBSD_x86_64.cpp.o] Error code 1

make[2]: stopped in /usr/work/wip/lldb/work/lldb-16.0.2.src/build
*** [all] Error code 6

make: stopped in /usr/work/wip/lldb/work/lldb-16.0.2.src/build
1 error

make: stopped in /usr/work/wip/lldb/work/lldb-16.0.2.src/build
*** Error code 2

Stop.
make[1]: stopped in /usr/pkgsrc/wip/lldb
*** Error code 1

Stop.
make: stopped in /usr/pkgsrc/wip/lldb

